<resources>
    <string name="app_name">免Root防火墙</string>

    <string name="fragment_network__start_firewall_button__enable__text">开启防火墙</string>
    <string name="fragment_network__start_firewall_button__disabled__text">退出应用以关闭防火墙</string>
    <string name="fragment_network__config_firewall_button__text">配置防火墙</string>
    <string name="fragment_network__header_application_text_view__text">应用</string>
    <string name="fragment_network__header_network_text_view__text">联网权限</string>

    <string name="fragment_message__update_message_abort_database_button__text">升级拦截数据库</string>
    <string name="fragment_message__start_message_abort_service_button__text">开启短信拦截服务</string>
    <string name="fragment_message__start_message_abort_service_button__disabled_text">退出应用以关闭服务</string>

    <string name="fragment_message__sandbox_text_view__text">短信隔离区</string>

    <string name="broadcast__vpn_interface_stop">BROADCAST__VPN_INTERFACE_STOP</string>

    <string name="activity_launch__navigation_network_title">网络模块</string>
    <string name="activity_launch__navigation_message_title">短信模块</string>
    <string name="activity_network_config__tcp_flow_mode_text_view__text">TCP流量控制模式:</string>
    <string name="activity_network_config__udp_flow_mode_text_view__text">UDP流量控制模式:</string>
    <string name="activity_network_config__flow_mode__spy">监控</string>
    <string name="activity_network_config__flow_mode__kill">拦截</string>

    <string name="toast__change_default_sms_application">请更改默认短信应用，否则短信防火墙无法使用</string>
    <string name="toast__recover_default_sms_application">请换源默认短信应用，否则你的短信将无法使用</string>

</resources>
